--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "frontend_perpustakaan",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8081",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -10,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.20.0",
+    "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
     "mdbootstrap": "^4.19.1",
     "mdbvue": "6.7.1",
