--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "mdbvue": "6.7.1",
     "nouislider": "^14.6.2",
     "vue": "^2.6.11",
+    "vue-lazy-load": "^0.0.7",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vue2-transitions": "^0.3.0",
-    "vuex": "^3.5.1",
-    "vue-lazy-load": "^0.0.7",
-    "vue-lazyload": "^1.3.3"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
