--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mdbootstrap": "^4.19.1",
     "mdbvue": "6.7.1",
     "nouislider": "^14.6.2",
+    "sweetalert2": "^10.10.1",
     "vue": "^2.6.11",
     "vue-lazy-load": "^0.0.7",
     "vue-lazyload": "^1.3.3",
