--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nouislider": "^14.6.2",
     "sweetalert2": "^10.10.1",
     "vue": "^2.6.11",
+    "vue-image-upload-resize": "^2.3.0",
     "vue-lazy-load": "^0.0.7",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
